--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.10",
     "materialize-css": "^0.100.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-sparklines": "^1.7.0",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
