--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "react-scripts": "1.1.4",
     "react-sparklines": "^1.7.0",
     "react-stripe-checkout": "^2.6.3",
+    "recharts": "^1.1.0",
     "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
