--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-select": "^2.0.0",
     "react-sparklines": "^1.7.0",
     "react-stripe-checkout": "^2.6.3",
     "recharts": "^1.1.0",
